tests/fixtures/invalid/chained_comparison.moss
fn main
    if 1 < 2 < 3
        output "yes"
